<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="visible"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xmlarge"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countryNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/country_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textColor="@color/grey_40" />

            <ImageView
                android:layout_width="@dimen/spacing_mxlarge"
                android:layout_height="@dimen/spacing_mxlarge"
                app:srcCompat="@drawable/ic_show_chart"
                android:contentDescription="@string/app_name"
                app:tint="@color/blue_300" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_10" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <ImageView
                android:layout_width="@dimen/spacing_mxlarge"
                android:layout_height="@dimen/spacing_mxlarge"
                app:srcCompat="@drawable/shape_circle"
                android:contentDescription="@string/app_name"
                app:tint="@color/orange_400" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cases"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_change"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currentTotalCases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/changeTotalCases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <ImageView
                android:layout_width="@dimen/spacing_mxlarge"
                android:layout_height="@dimen/spacing_mxlarge"
                app:tint="@color/indigo_400"
                app:srcCompat="@drawable/shape_circle"
                android:contentDescription="@string/app_name" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active_cases"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_change"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currentActiveCasesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/changeActiveCasesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <ImageView
                android:layout_width="@dimen/spacing_mxlarge"
                android:layout_height="@dimen/spacing_mxlarge"
                app:srcCompat="@drawable/shape_circle"
                android:contentDescription="@string/app_name"
                app:tint="@color/red_A700" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/death_cases"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_change"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/deathActiveCasesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/deathChangeCasesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <ImageView
                android:layout_width="@dimen/spacing_mxlarge"
                android:layout_height="@dimen/spacing_mxlarge"
                app:srcCompat="@drawable/shape_circle"
                android:contentDescription="@string/app_name"
                app:tint="@color/blue_400" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered_cases"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_change"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currentRecoveredCasesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/changeRecoveredCasesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <ImageView
                android:layout_width="@dimen/spacing_mxlarge"
                android:layout_height="@dimen/spacing_mxlarge"
                app:srcCompat="@drawable/shape_circle"
                android:contentDescription="@string/app_name"
                app:tint="@color/blue_600" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_tested"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recent_change"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currentTestedCasesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/changeTestedCasesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+123456"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

    </LinearLayout>

</androidx.cardview.widget.CardView>